Fixes desktop navigation spacing (#219)

--- a/app/components/ui/Navigation/DesktopNavigation.module.scss
+++ b/app/components/ui/Navigation/DesktopNavigation.module.scss
@@ -6,7 +6,7 @@
   font-size: 18px;
   text-decoration: none;
   color: $text-primary;
-  padding: $spacing-3 $spacing-3;
+  padding: $spacing-3 $spacing-4;
 
   &:hover {
     text-decoration: none;
