--- a/app/components/ui/Navigation/Navigation.module.scss
+++ b/app/components/ui/Navigation/Navigation.module.scss
@@ -71,7 +71,7 @@
     // Adds separator
     border-right: 1px solid black;
     padding-right: $spacing-4;
-    margin-right: $spacing-4;
+    margin-right: $spacing-6;
   }
   // margin-right: $spacing-6;
 
